# folder-flattener

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chatbot/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
chatbot/backend/: main.py
chatbot/data/: catalog.csv
chatbot/frontend/: index.html  package.json
chatbot/frontend/src/: App.jsx
folder_flattener/: __init__.py  cli.py  core.py  gui.py
tests/: test_core.py
